--- a/DA.ipynb
+++ b/DA.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vehicles data analysis\n",
+    "\n",
+    "data visulaisation and analysis project on large vehicle data set\n",
+    "the purpose of this project is to show the relationship various variables and how they interact with eachother and show that in a visual and an interactive way that is hoted on a public server"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,11 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "vehicles = pd.read_csv('vehicles_us.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data is a comma seperated value document > no arguments were passed in order for pandas to read data into the dataframe"
    ]
   },
   {
@@ -33,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,24 +91,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# replacing missing values \n",
+    "# replace with large number to highlight unimportance and to have it easily be cut as an outlier\n",
     "vehicles['model_year'].fillna(9999, inplace = True)\n",
-    "vehicles['cylinders'].fillna(999, inplace = True)\n",
     "\n",
+    "# turns column into binary answers which are easy to read \n",
     "vehicles['is_4wd'].fillna(0, inplace = True)\n",
     "\n",
-    "vehicles['odometer'].fillna(vehicles['odometer'].mean(), inplace = True)\n",
+    "# paint colour is qualitative so cant be derived from an average meaningfully\n",
+    "vehicles['paint_color'].fillna('Unknown', inplace = True)\n",
     "\n",
-    "vehicles['paint_color'].fillna('Unknown', inplace = True)\n"
+    "\n",
+    "\n",
+    "# Fill nan cylinders with the mean of their corosponding mean depentant on the model of the vehicle \n",
+    "# get a list of all the vehicles that have missing cylinder values associated \n",
+    "nanc_models: list = vehicles[vehicles['cylinders'].isna()]['model'].unique()\n",
+    "#get a dictionary of each model and thier average number of cylinders (rounded as an int)     \n",
+    "nanc_cyldinders: dict = dict(vehicles[vehicles['model'].isin(nanc_models)].groupby('model')['cylinders'].mean().__round__())  #get a dictionary of each model and thier average number of cylinders (rounded as an int)\n",
+    "# map the corisponding values onto the nan values\n",
+    "vehicles['cylinders'] = vehicles['cylinders'].fillna(vehicles['model'].map(nanc_cyldinders))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Fill nan odometer with the mean of their models \n",
+    "nano_models: list = vehicles[vehicles['odometer'].isna()]['model'].unique()\n",
+    "nano_odometer: dict = dict(vehicles[vehicles['model'].isin(nano_models)].groupby('model')['odometer'].mean())\n",
+    "vehicles['odometer'] = vehicles['odometer'].fillna(vehicles['model'].map(nano_odometer))\n",
+    "vehicles['odometer'] = vehicles['odometer'].fillna(vehicles['odometer'].mean()) #mercedes-benz benze sprinter 2500 has no infomation on mileage so wasnt mapped\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +194,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,12 +207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# exporting the now cleaned dataframe into the respository to be used with the main.py file \n",
     "vehicles.to_csv('vehicles_clean.csv', index = False, encoding = 'utf-8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "data has been cleaned and exported into the enviroment for use in the main python document,\n",
+    "\n",
+    "overall concluions show a relatively clean data set, minor wuality of life changes had to be made so some data types in order to improve usability. similarly, NaN values had to be filled, NaN values weren't hugely common and were replaced by their relative means where possible so should effect the outcome of further analysis and visulaisation too greatly "
    ]
   },
   {
@@ -197,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -236,16 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PearsonRResult(statistic=-0.385296526727429, pvalue=0.0)"
+       "PearsonRResult(statistic=-0.38408676469270364, pvalue=0.0)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
