--- a/DA.ipynb
+++ b/DA.ipynb
@@ -314,10 +314,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# EDA Conclusion \n",
+    "\n",
+    "This project has highlighted some intresting things through the data such as the stark difference in prices between different types and different companies/ brands as well as the corrolation between the mileage of the car and its price. this corrolation came out relatively weak but general consecious would lead you to believe that the corrolation between the 2 variables to be a stronger negative. The visulaisation in the main.py file shows the weakness better. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
